# My-C-abstract

./: README.md
BasicOperations/: main.cpp
BasicOperations/.cache/clangd/index/: arithmetic_operations.cpp.82D1A776E7F451BD.idx  main.cpp.7236009766E578EB.idx
BasicOperations/Arithmetic_operations/: CMakeLists.txt  arithmetic_operations.cpp
BasicOperations/Arithmetic_operations/.cache/clangd/index/: arithmetic_operations.cpp.33CB4BB44942D517.idx
BasicOperations/Logic_operations/: CMakeLists.txt  main.cpp
BasicOperations/Logic_operations/.cache/clangd/index/: main.cpp.A39FBBBE438C536A.idx
BasicOperations/Loops/: CMakeLists.txt  main.cpp
BasicOperations/Loops/.cache/clangd/index/: main.cpp.1D4B5237D21A6622.idx
BasicOperations/Relation_operations/: CMakeLists.txt  main.cpp
BasicOperations/Relation_operations/.cache/clangd/index/: main.cpp.09C9650306B6B515.idx
GeneralConcepts/Consts/: CMakeLists.txt  main.cpp
GeneralConcepts/Consts/.cache/clangd/index/: main.cpp.02B5FF70E6AE1583.idx
GeneralConcepts/DataTypesAndVariables/: CMakeLists.txt  main.cpp
GeneralConcepts/DataTypesAndVariables/.cache/clangd/index/: main.cpp.C9CF97442E44CAFC.idx
PointersReferences/Pointers/: CMakeLists.txt  arithmetics_pointers.cpp  basic_pointers.cpp  const_pointers.cpp  main.cpp  new_delete_operators.cpp
PointersReferences/References/: main.cpp
Strings/: CMakeLists.txt  main.cpp
